# nix-lfs

./: bootstrap1.nix  bootstrap2.nix  bootstrap3.nix  default.nix  glibc.nix
10.0/: index.html  legalnotice.html  longindex.html  part1.html  part2.html  part3.html  part4.html  part5.html
10.0/appendices/: acknowledgments.html  acronymlist.html  creat-comm.html  dependencies.html  licenses.html  mit.html
10.0/chapter01/: askforhelp.html  changelog.html  chapter01.html  how.html  resources.html  whatsnew.html
10.0/chapter02/: aboutlfs.html  chapter02.html  creatingfilesystem.html  creatingpartition.html  hostreqs.html  introduction.html  mounting.html  stages.html
10.0/chapter03/: chapter03.html  introduction.html  packages.html  patches.html
10.0/chapter04/: aboutsbus.html  abouttestsuites.html  addinguser.html  chapter04.html  creatingminlayout.html  introduction.html  settingenvironment.html
10.0/chapter05/: binutils-pass1.html  chapter05.html  gcc-libstdc++-pass1.html  gcc-pass1.html  glibc.html  introduction.html  linux-headers.html
10.0/chapter06/: bash.html  binutils-pass2.html  chapter06.html  coreutils.html  diffutils.html  file.html  findutils.html  gawk.html  gcc-pass2.html  grep.html  gzip.html  introduction.html  m4.html  make.html  ncurses.html  patch.html  sed.html  tar.html  xz.html
10.0/chapter07/: Python.html  bison.html  changingowner.html  chapter07.html  chroot.html  createfiles.html  creatingdirs.html  gcc-libstdc++-pass2.html  gettext.html  introduction.html  kernfs.html  perl.html  stripping.html  texinfo.html  util-linux.html
10.0/chapter08/: Python.html  aboutdebug.html  acl.html  attr.html  autoconf.html  automake.html  bash.html  bc.html  binutils.html  bison.html  bzip2.html  chapter08.html  check.html  coreutils.html  dejagnu.html  diffutils.html  e2fsprogs.html  eudev.html  expat.html  expect.html  file.html  findutils.html  flex.html  gawk.html  gcc.html  gdbm.html  gettext.html  glibc.html  gmp.html  gperf.html  grep.html  groff.html  grub.html  gzip.html  iana-etc.html  inetutils.html  intltool.html  introduction.html  iproute2.html  kbd.html  (+39 more)
10.0/chapter09/: bootscripts.html  chapter09.html  etcshells.html  inputrc.html  introduction.html  network.html  profile.html  symlinks.html  (+2 more)
src/: env.sh
src/man-db-2.9.3/src/tests/: Makefile.am  fspause.c  man-mandatory-manpath  man-recode-in-place  man-recode-suffix  man-suffixed-extension  manconv-coding-tags  manconv-guess-from-encoding  manconv-odd-combinations
(+1934 files in other folders)
